--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.59.20",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.7",
     "jotai": "^2.10.2",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
